[tool.poetry]
authors = [
    "DetachHead <detachhead@users.noreply.github.com>",
    "KotlinIsland <kotlinisland@users.noreply.github.com>",
]
description = "Utilities for basedmypy"
name = "basedtyping"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
basedmypy = "^2"
black = "^22"
flake8 = "^4"
isort = "^5"
pylint = "^2"
pytest = "^7"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.8"]

[tool.mypy]
pretty = true
show_error_context = true

[tool.isort]
profile = "black"
multi_line_output = 3
combine_as_imports = true

[tool.black]
target-version = ["py37"]
preview = true

[tool.pylint.MASTER]
fail-on = "I"

[tool.pylint."MESSAGE CONTROL"]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "invalid-name",                              # https://github.com/PyCQA/pylint/issues/3401
    "fixme",
    "useless-import-alias",                      # required when using no-implicit-reexport in mypy
    "no-member",                                 # handled by mypy
    "inherit-non-class",                         # handled by mypy, false positive on ReifiedGeneric
    "too-few-public-methods",                    # didn't ask + ratio
    "unused-import",                             # false negatives + handled by flake8
    "duplicate-code",                            # https://github.com/PyCQA/pylint/issues/214
    "isinstance-second-argument-not-valid-type", # false positive on Never type, handled by mypy
    "no-value-for-parameter",                    # handled by mypy
    "too-many-return-statements",
]
enable = ["useless-suppression", "deprecated-pragma"]

[tool.pylint.FORMAT]
max-line-length = 200

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
xfail_strict = true
